Finalisation de la partie expèrience, ajout de l'icone officielle du site ! Ajout des images liées au projet (svg) et enfin initialisation de la partie projet
Signed-off-by: Christophe GERARD <christophe.gerard8@gmail.com>

--- a/front/src/my-diploma.html
+++ b/front/src/my-diploma.html
@@ -83,7 +83,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <div class="center"> <h2> Certification Auto-Entrepreneur</h2></div>    
           <div class="center"><my-svg src="../public/images/Diplomes/Entrepreneur.svg" width="80%" height="65%"></my-svg></div>  
           <div class="center"> <h2> Certification NodeJS</h2></div>    
-          <div class="center"><my-svg src="../public/images/Diplomes/NodeJS.svg" width="80%" height="65%"></my-svg></div> 
+          <div class="center"><my-svg src="../public/images/Diplomes/NodeJS.svg" width="80%" height="65%"></my-svg></div>
+          <div class="center"><h2> Certification du TOIEC (Score)</h2></div>
+          <div class="center"><my-svg src="../public/images/Diplomes/toiec.svg" width="80%" height="65%"></my-svg></div>
     </div>
   </template>
 
