--- a/front/src/my-history.html
+++ b/front/src/my-history.html
@@ -68,7 +68,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <h1>Mon profil !</h1>
         </div>
         <div class="svg"><my-svg  src="../public/images/moiCartoonSvg.svg" width="33%" height="33%"></my-svg></div>
-        <p> Je suis un programmeur agé de 23 ans. De nature curieux et touche à tout, je surveille de près les nouvelles technologies (Aussi bien dans le domaine de la programmation que dans le domaine des jeux vidéos). J'ai beaucoup appris par moi même. Je pense être plutôt autodidacte et j'adore apprendre de nouvelles choses !<br/> Enfin j'ai un caractère facile, je m'entends avec tout le monde facilement et je suis plutot joyeux ! :) </p>
+        <p> Je suis un programmeur agé de 23 ans. De nature curieux et touche à tout, je surveille de près les nouvelles technologies (Aussi bien dans le domaine de la programmation que dans le domaine des jeux vidéos). J'ai beaucoup appris par moi même. Je pense être plutôt autodidacte et j'adore apprendre de nouvelles choses !<br/> Enfin, j'ai un caractère facile, je m'entends avec tout le monde facilement et je suis plutot joyeux ! :) </p>
     </div>
     <div class="card">
     <div class="content">
