--- a/front/src/my-projects.html
+++ b/front/src/my-projects.html
@@ -53,8 +53,73 @@
             <div class="content">
                 <div class="circle">1</div>
 		        <h1>PlastProd</h1>
+                 <div><my-svg src="../public/images/Projet/plastprod.svg" widht="25%" height="25%"></my-svg></div>
             </div>
-            <p> YOLOOOO</p>
+            <p>Projet d'étude</p>
+		</div>
+        <div class="card">
+            <div class="content">
+                <div class="circle">2</div>
+		        <h1>BarBeasts</h1>
+                 <div><my-svg src="../public/images/Projet/barbeasts.svg" widht="25%" height="25%"></my-svg></div>
+            </div>
+            <p>Projet d'étude</p>
+		</div>
+         <div class="card">
+            <div class="content">
+                <div class="circle">3</div>
+		        <h1>Tetris</h1>
+                 <div><my-svg src="../public/images/Projet/tetris.svg" width="25%" height="25%"></my-svg></div>
+            </div>
+            <p>Projet d'étude</p>
+		</div>
+        <div class="card">
+            <div class="content">
+                <div class="circle">4</div>
+		        <h1>Diplomacy</h1>
+                 <div><my-svg src="../public/images/Projet/diplomacy.svg" width="25%" height="25%"></my-svg></div>
+            </div>
+            <p>Projet d'étude</p>
+		</div>
+        <div class="card">
+            <div class="content">
+                <div class="circle">5</div>
+		        <h1>Résolveur de labyrinthe</h1>
+                 <div><my-svg src="../public/images/Projet/labyrinthe.svg" width="25%" height="25%"></my-svg></div>
+            </div>
+            <p>Projet d'étude</p>
+		</div>
+        <div class="card">
+            <div class="content">
+                <div class="circle">6</div>
+		        <h1>Application web (Intranet) pour le suivi de production d'un atelier</h1>
+                 <div><my-svg src="../public/images/Experiences/clairefontaine.svg" width="25%" height="25%"></my-svg></div>
+            </div>
+            <p>Projet pro</p>
+		</div>
+        <div class="card">
+            <div class="content">
+                <div class="circle">7</div>
+		        <h1>SEL3C - Gestion d'un projet technique</h1>
+                 <div><my-svg src="../public/images/Experiences/cats.svg" width="25%" height="25%"></my-svg></div>
+            </div>
+            <p>Projet pro</p>
+		</div>
+        <div class="card">
+            <div class="content">
+                <div class="circle">8</div>
+		        <h1> Bomberman </h1>
+                 <div><my-svg src="../public/images/Projet/bomberman.svg" width="25%" height="25%"></my-svg></div>
+            </div>
+            <p>Projet perso</p>
+		</div>
+        <div class="card">
+            <div class="content">
+                <div class="circle">8</div>
+		        <h1> Ce site !  </h1>
+                 <div><my-svg src="../public/images/Projet/siteperso.svg" width="25%" height="100%"></my-svg></div>
+            </div>
+            <p>Projet perso</p>
 		</div>
 	</template>
 	<script>
