--- a/front/index.html
+++ b/front/index.html
@@ -16,7 +16,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <title>Christophe Gerard </title>
 
-  <link rel="shortcut icon" sizes="32x32" href="./public/images/siteperso.svg">
+  <link rel="shortcut icon" sizes="32x32" href="./public/images/siteperso.bmp">
 
   <meta name="theme-color" content="#fff">
   <link rel="manifest" href="/manifest.json">
