--- a/front/src/my-projects.html
+++ b/front/src/my-projects.html
@@ -53,7 +53,7 @@
             <div class="content">
                 <div class="circle">1</div>
 		        <h1>PlastProd</h1>
-                 <div><my-svg src="../public/images/Projet/plastprod.svg" widht="25%" height="25%"></my-svg></div>
+                 <div><my-svg src="../public/images/Projet/plastprod.svg" width="25%" height="25%"></my-svg></div>
             </div>
             <p>Projet d'étude</p>
 		</div>
@@ -61,7 +61,7 @@
             <div class="content">
                 <div class="circle">2</div>
 		        <h1>BarBeasts</h1>
-                 <div><my-svg src="../public/images/Projet/barbeasts.svg" widht="25%" height="25%"></my-svg></div>
+                 <div><my-svg src="../public/images/Projet/barbeasts.svg" width="25%" height="25%"></my-svg></div>
             </div>
             <p>Projet d'étude</p>
 		</div>
