Ajout d'une meilleure ergo (Scrollbar remise en haut au changement de page)
Signed-off-by: Christophe GERARD <christophe.gerard8@gmail.com>

--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -190,8 +190,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         // load page import on demand.
         this.importHref(
           this.resolveUrl('my-' + page + '.html'), null, null, true);
+          window.scrollTo(0,0); // on remonte la scrollBar
       }
-
     });
 
   </script>
