--- a/front/src/my-skills.html
+++ b/front/src/my-skills.html
@@ -18,7 +18,7 @@
 				border-radius: 5px;
 				background-color: #3F525A;
 				color: #F8F0C2;
-                text-align: justify;
+                text-align: center;
 		  }
 		  .circle {
 				display: inline-block;
