--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -153,6 +153,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </template>
     <script src="../bower_components/mobile-detect/mobile-detect.min.js"></script>
   <script>
+  window.addEventListener('WebComponentsReady', function(e) {
+                console.log('components ready');
+    });
 
     Polymer({
 
