--- a/front/src/my-history.html
+++ b/front/src/my-history.html
@@ -100,12 +100,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </template>
 
   <script>
+window.addEventListener('WebComponentsReady', function(e) {
 
-    Polymer({
+ Polymer({
 
       is: 'my-history'
 
     });
+
+});
+   
 
   </script>
 
