--- a/front/src/my-projects.html
+++ b/front/src/my-projects.html
@@ -122,11 +122,14 @@
 		</div>
 	</template>
 	<script>
+	window.addEventListener('WebComponentsReady', function(e) {
 		Polymer({
 			is : 'my-projects',
 			properties : {
 				route : Object
 			}
 		});
+	});
+		
 	</script>
 </dom-module>
