--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -8,7 +8,7 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 <link rel="import" href="../bower_components/polymer/polymer.html">
---<link rel="import" href="../bower_components/app-route/app-location.html">
+<link rel="import" href="../bower_components/app-route/app-location.html">
 <link rel="import" href="../bower_components/app-route/app-route.html">
 <link rel="import" href="../bower_components/app-layout/app-drawer-layout/app-drawer-layout.html">
 <link rel="import" href="../bower_components/app-layout/app-drawer/app-drawer.html">
@@ -153,10 +153,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </template>
     <script src="../bower_components/mobile-detect/mobile-detect.min.js"></script>
   <script>
-  window.addEventListener('WebComponentsReady', function(e) {
-                console.log('components ready');
-    });
-
     Polymer({
 
       is: 'my-app',
