--- a/front/index.html
+++ b/front/index.html
@@ -20,32 +20,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <meta name="theme-color" content="#fff">
   <link rel="manifest" href="/manifest.json">
-
+  <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <script>
 
     // setup Polymer options
     window.Polymer = {lazyRegister: true, dom: 'shadow'};
-
-    // load webcomponents polyfills
-    (function() {
-      if ('registerElement' in document
-          && 'import' in document.createElement('link')
-          && 'content' in document.createElement('template')) {
-        // browser has web components
-      } else {
-        // polyfill web components
-        var e = document.createElement('script');
-        e.src = './bower_components/webcomponentsjs/webcomponents-lite.js';
-        document.head.appendChild(e);
-      }
-    })();
-
-    // load pre-caching service worker
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function() {
-        navigator.serviceWorker.register('/service-worker.js');
-      });
-    }
   </script>
 
   <link rel="import" href="src/elements.html">
