--- a/front/index.html
+++ b/front/index.html
@@ -21,6 +21,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 	
   <meta name="theme-color" content="#fff">
   <link rel="manifest" href="/manifest.json">
+  <script src="bower_components/polymer/polymer.html"></script>
   <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
   <script>
 
