--- a/front/index.html
+++ b/front/index.html
@@ -21,7 +21,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 	
   <meta name="theme-color" content="#fff">
   <link rel="manifest" href="/manifest.json">
-  <script src="bower_components/polymer/polymer.html"></script>
   <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
   <script>
 
@@ -30,6 +29,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </script>
 
   <link rel="import" href="src/elements.html">
+   <link rel="import" href="../bower_components/polymer/polymer.html">
 
   <style>
 
