--- a/front/index.html
+++ b/front/index.html
@@ -29,7 +29,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </script>
 
   <link rel="import" href="src/elements.html">
-   <link rel="import" href="../bower_components/polymer/polymer.html">
+   <link rel="import" href="/bower_components/polymer/polymer.html">
 
   <style>
 
