--- a/front/index.html
+++ b/front/index.html
@@ -21,15 +21,27 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 	
   <meta name="theme-color" content="#fff">
   <link rel="manifest" href="/manifest.json">
-  <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
   <script>
 
     // setup Polymer options
     window.Polymer = {lazyRegister: true, dom: 'shadow'};
+	
+	(function() {
+  if ('registerElement' in document
+      && 'import' in document.createElement('link')
+      && 'content' in document.createElement('template')) {
+    // platform is good!
+  } else {
+    // polyfill the platform!
+    var e = document.createElement('script');
+    e.src = 'bower_components/webcomponentsjs/webcomponents-lite.min.js';
+    document.body.appendChild(e);
+  }
+})();
   </script>
 
   <link rel="import" href="src/elements.html">
-   <link rel="import" href="bower_components/polymer/polymer.html">
+  <link rel="import" href="bower_components/polymer/polymer.html">
 
   <style>
 
