--- a/front/index.html
+++ b/front/index.html
@@ -12,7 +12,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 
   <title>Christophe Gerard </title>
@@ -21,23 +21,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 	
   <meta name="theme-color" content="#fff">
   <link rel="manifest" href="/manifest.json">
+  <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
   <script>
 
     // setup Polymer options
     window.Polymer = {lazyRegister: true, dom: 'shadow'};
-	
-	(function() {
-  if ('registerElement' in document
-      && 'import' in document.createElement('link')
-      && 'content' in document.createElement('template')) {
-    // platform is good!
-  } else {
-    // polyfill the platform!
-    var e = document.createElement('script');
-    e.src = 'bower_components/webcomponentsjs/webcomponents-lite.min.js';
-    document.body.appendChild(e);
-  }
-})();
   </script>
 
   <link rel="import" href="src/elements.html">
