--- a/front/index.html
+++ b/front/index.html
@@ -9,27 +9,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <!doctype html>
-<html lang="en">
+<html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 
   <title>Christophe Gerard </title>
 
   <link rel="shortcut icon" sizes="32x32" href="./public/images/siteperso.bmp">
-	
-  <meta name="theme-color" content="#fff">
-  <link rel="manifest" href="/manifest.json">
   <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
-  <script>
-
-    // setup Polymer options
-    window.Polymer = {lazyRegister: true, dom: 'shadow'};
-  </script>
-
   <link rel="import" href="src/elements.html">
-  <link rel="import" href="bower_components/polymer/polymer.html">
 
   <style>
 
