--- a/front/index.html
+++ b/front/index.html
@@ -35,6 +35,7 @@ function lazyLoadPolymerAndElements () {
 
   var elements = [
     'src/elements.html',
+    'src/my-app.html'
   ];
 
   elements.forEach(function(elementURL) {
