--- a/front/index.html
+++ b/front/index.html
@@ -34,8 +34,7 @@ function lazyLoadPolymerAndElements () {
   window.Polymer.dom = 'shadow';
 
   var elements = [
-    'src/elements.html',
-    'src/my-app.html'
+    'src/elements.html'
   ];
 
   elements.forEach(function(elementURL) {
