--- a/front/src/elements.html
+++ b/front/src/elements.html
@@ -18,3 +18,4 @@
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/social-media-icons/social-media-icons.html">
+<link rel="import" href="../bower_components/polymer/polymer.html">
