--- a/front/index.html
+++ b/front/index.html
@@ -11,7 +11,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!doctype html>
 <html>
 <head>
-  <script>/**
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+  <title>Christophe Gerard </title>
+  <link rel="shortcut icon" sizes="32x32" href="./public/images/siteperso.bmp">
+      <script>/**
  * Conditionally loads webcomponents polyfill if needed.
  * Credit: Glen Maddern (geelen on GitHub)
  */
@@ -47,13 +52,8 @@ function lazyLoadPolymerAndElements () {
 
   })
 }</script>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <title>Christophe Gerard </title>
-  <link rel="shortcut icon" sizes="32x32" href="./public/images/siteperso.bmp">
 </head>
-<body>
+<body unresolved>
   <my-app></my-app>
 </body>
 </html>
