--- a/front/index.html
+++ b/front/index.html
@@ -26,7 +26,7 @@ var webComponentsSupported = ('registerElement' in document
 
 if (!webComponentsSupported) {
   var wcPoly = document.createElement('script');
-  wcPoly.src = 'bower_components/webcomponentsjs/webcomponents-lite.min.js';
+  wcPoly.src = 'bower_components/webcomponentsjs/webcomponents-lite.js';
   wcPoly.onload = lazyLoadPolymerAndElements;
   document.head.appendChild(wcPoly);
 } else {
@@ -53,7 +53,7 @@ function lazyLoadPolymerAndElements () {
   })
 }</script>
 </head>
-<body unresolved>
+<body>
   <my-app></my-app>
 </body>
 </html>
