--- a/front/index.html
+++ b/front/index.html
@@ -11,12 +11,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <title>Christophe Gerard </title>
-  <link rel="shortcut icon" sizes="32x32" href="./public/images/siteperso.bmp">
-      <script>/**
+    <script>/**
  * Conditionally loads webcomponents polyfill if needed.
  * Credit: Glen Maddern (geelen on GitHub)
  */
@@ -26,14 +21,15 @@ var webComponentsSupported = ('registerElement' in document
 
 if (!webComponentsSupported) {
   var wcPoly = document.createElement('script');
-  wcPoly.src = 'bower_components/webcomponentsjs/webcomponents-lite.js';
+  wcPoly.src = 'bower_components/webcomponentsjs/webcomponents-lite.min.js';
   wcPoly.onload = lazyLoadPolymerAndElements;
   document.head.appendChild(wcPoly);
 } else {
   lazyLoadPolymerAndElements();
 }
 
-function lazyLoadPolymerAndElements () {
+function lazyLoadPolymerAndElements() {
+
   // Let's use Shadow DOM if we have it, because awesome.
   window.Polymer = window.Polymer || {};
   window.Polymer.dom = 'shadow';
@@ -52,6 +48,11 @@ function lazyLoadPolymerAndElements () {
 
   })
 }</script>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+  <title>Christophe Gerard </title>
+  <link rel="shortcut icon" sizes="32x32" href="./public/images/siteperso.bmp">
 </head>
 <body>
   <my-app></my-app>
