--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -153,8 +153,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </template>
   <script src="../bower_components/mobile-detect/mobile-detect.min.js"></script>
   <script>
-      window.addEventListener('WebComponentsReady', function() {  Polymer({
-
+      Polymer({
       is: 'my-app',
 
       properties: {
@@ -191,8 +190,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           this.resolveUrl('my-' + page + '.html'), null, null, true);
           window.scrollTo(0,0); // on remonte la scrollBar
       }
-    });
-});
+      
+      });
+
    
   </script>
 
