--- a/front/index.html
+++ b/front/index.html
@@ -35,7 +35,7 @@ function lazyLoadPolymerAndElements() {
   window.Polymer.dom = 'shadow';
 
   var elements = [
-    'bower_components/polymer/polymer.min.html',
+    'bower_components/polymer/polymer.html',
     'src/my-svg.html',
     'src/my-app.html',
     'src/my-history.html',
