--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -70,7 +70,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
         .pages
         {
-           background-image : url('../public/images/background.gif');
+           background-image : url('../public/images/background.png');
         }
 		footer {
 		  height: 50px;
@@ -107,7 +107,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         pattern="/:page"
         data="{{routeData}}"
         tail="{{subroute}}"></app-route>
-
+   
     <app-drawer-layout fullbleed>
 
       <!-- Drawer content -->
@@ -192,7 +192,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       
       });
-
+      
    
   </script>
 
