--- a/front/index.html
+++ b/front/index.html
@@ -9,9 +9,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <!doctype html>
-<html>
+<html lang="fr">
 <head>
-    <script>/**
+<script>         
+/**
  * Conditionally loads webcomponents polyfill if needed.
  * Credit: Glen Maddern (geelen on GitHub)
  */
@@ -51,18 +52,26 @@ function lazyLoadPolymerAndElements() {
     var elImport = document.createElement('link');
     elImport.rel = 'import';
     elImport.href = elementURL;
-
     document.head.appendChild(elImport);
 
   })
-}</script>
+}
+    </script>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+     <link rel="stylesheet" type="text/css"
+          href="https://fonts.googleapis.com/css?family=Raleway">
+    <style> body
+        {
+            font-family: "Raleway";
+        }
+    </style>
   <title>Christophe Gerard </title>
-  <link rel="shortcut icon" sizes="32x32" href="./public/images/siteperso.bmp">
+  <link rel="shortcut icon" sizes="32x32" href="./public/images/siteperso.png">
 </head>
 <body>
-  <my-app></my-app>
+    <my-app></my-app>
 </body>
 </html>
+
