--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -29,7 +29,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <template>
 
     <style>
-
       :host {
         display: block;
         --app-primary-color: #3F525A;
@@ -87,15 +86,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		
 		.navigation
 		{
-			    background-image: url('../public/images/header.jpg');
-				-webkit-background-size: cover; /* pour anciens Chrome et Safari */
-				background-size: cover;
-				margin-bottom: -9.5%;
-				padding-bottom: 4.0%;
-				font-size: 1.6em;
-				margin-top: 0%;
-				padding-top: 6%;
-				color: #3F525A;
+            background-image: url('../public/images/header.jpg');
+            -webkit-background-size: cover;
+            background-size: cover;
+            margin-bottom: -7.2%;
+            padding-bottom: 7.2%;
+            font-size: 1.6em;
+            margin-top: 0%;
+            padding-top: 6%;
+            color: #3F525A;
 		}
 }
 
