--- a/front/src/my-history.html
+++ b/front/src/my-history.html
@@ -27,7 +27,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         border-radius: 5px;
         background-color: #3F525A;
         color: #F8F0C2;
-        text-align: center;
+        text-align: justify;
       }
       .circle {
         display: inline-block;
@@ -66,22 +66,22 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <div class="card">
         <div class="content">
             <div class="circle">1</div>
-            <h1>Mon profil !</h1>
+            <h1>Mon profil</h1>
         </div>
         <div class="svg"><my-svg  src="../public/images/moiCartoonSvg.svg" width="33%" height="33%"></my-svg></div>
-        <p> Je suis un programmeur agé de 23 ans. De nature curieux et touche à tout, je surveille de près les nouvelles technologies (Aussi bien dans le domaine de la programmation que dans le domaine des jeux vidéos). J'ai beaucoup appris par moi même. Je pense être plutôt autodidacte et j'adore apprendre de nouvelles choses !<br/> Enfin, j'ai un caractère facile, je m'entends avec tout le monde facilement et je suis plutot joyeux ! :) </p>
+        <p> Je suis un programmeur agé de <b>23 ans</b>. De nature curieux et touche à tout, je surveille de près les nouvelles technologies (Aussi bien dans le domaine de la programmation que dans le domaine des jeux vidéos). J'ai beaucoup appris par moi même. Je pense être plutôt <b>autodidacte</b> et j'adore apprendre de nouvelles choses !<br/> Enfin, j'ai un caractère <b>facile</b>, je m'entends avec tout le monde facilement et je suis plutot joyeux :). </p>
     </div>
     <div class="card">
     <div class="content">
       <div class="circle">2</div>
-      <h1>Découverte de la programmation !</h1>
+      <h1>Découverte de la programmation</h1>
     </div>
-        <p>Mon intérêt pour la programmation est apparue en fin de collège, c'est à ce moment que j'ai commencé à toucher à tout sur l'ordinateur de la famille. Je me demandais comment ça marchais pour que les fenêtres applicative s'ouvrent. Comment fonctionnait les programmes et j'ai commencé à me renseigner. Je suis alors tombé sur le <b>Site du Zéro</b> (maitenant <a href="https://openclassrooms.com/"><b>OpenClassRoom</b></a>) et j'ai appris un langage de programmation (Le langage C)!</p>
+        <p>Mon intérêt pour la programmation est apparue en fin de collège, c'est à ce moment que j'ai commencé à toucher à tout sur l'ordinateur de la famille. Je me demandais comment ça marchais pour que les fenêtres applicatives s'ouvrent. Je suis alors tombé sur le <b>Site du Zéro</b> (maitenant <a href="https://openclassrooms.com/"><b>OpenClassRoom</b></a>) et j'ai appris un langage de programmation (Le <b>langage C</b>)!</p>
     </div>
     <div class="card">
     <div class="content">
         <div class="circle">3</div>
-        <h1> Les études !</h1>
+        <h1>Les études</h1>
     </div>
         <p> En premier lieu , j'ai effectué un <b>BAC STI</b>(<b>S</b>ciences et <b>T</b>echnologies <b>I</b>ndustrielles) GEN (<b>G</b>énie <b>E</b>léctronique) , pendant cette formation j'ai eu l'occasion d'en apprendre beaucoup sur l'eléctronique. C'est ce qui m'a permi d'avoir de bonne base pour la suite, j'ai bien compris à quoi servait les composants physiques dans le PC grâce à cette formation !</p>
         <p> Je me suis ensuite orienté vers un <b>D.U.T Informatique</b> à l'université de Lorraine (IUT Nancy-Charlemagne pour être précis), pendant cette formation j'ai appris plusieurs langage notamment le langage JAVA (C'était le plus présent). J'ai appris beaucoup de choses et j'ai bien été formé mais j'ai eu du mal à apprécié la formation qui pour moi, avait un esprit de compétition trop présent (Le classement rendait les gens à cran). </p>
@@ -91,11 +91,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
      <div class="card">
     <div class="content">
       <div class="circle">4</div>
-      <h1>Mes hobbies !</h1>
+      <h1>Mes hobbies</h1>
     </div>
-         <p>Comme je le disais dans mon profil, j'ai un interêt tout particulier pour les nouvelles technologies, le développement informatique me passione, alors je mets un point d'honneur à me tenir informé de ce qui sort pour me facilité la vie ! Par exemple, ce site est écrit en <b>Polymer</b> pour le front-end et <b>NodeJS</b> pour le back-end (qui n'a pas de grosse utilité pour ce portfolio au passage !), je regarde des conférence (notamment <b>Google I/O</b>) et m'informe régulièrement pour me tenir au courant !</p>
-         <p> Au dela de la technologie, je suis aussi un gros joueur ! J'aime les jeux vidéos et j'y passe beaucoup de temps ! Je joue principalement à des jeux multijoueur en ligne (notamment <b>CS-GO</b> et <b>Rocket League</b>)</p>
-         <p> Enfin je suis aussi sportif, je fais de la <b>natation</b> assez régulièrement pour me maintenir en bonnes conditions physiques ! Je pense aussi me ré-inscrire à une <b>salle de musculation</b> prochainement !</p>
+         <p>Comme je le disais dans mon profil, j'ai un interêt tout particulier pour les nouvelles technologies, le développement informatique me passionne, alors je mets un point d'honneur à me tenir informé de ce qui sort pour me faciliter la vie ! Par exemple, ce site est écrit en <b>Polymer</b> pour le front et <b>NodeJS</b> pour le back-end (qui n'a pas de grosse utilité pour ce portfolio au passage !), je regarde des conférences (notamment <b>Google I/O</b>) et m'informe régulièrement pour me tenir au courant !</p>
+         <p> Au dela de la technologie, je suis aussi un gros joueur ! J'aime les jeux vidéos et j'y passe beaucoup de temps. Je joue principalement à des jeux multijoueurs en ligne (notamment <b>CS-GO</b> et <b>Rocket League</b>)</p>
+         <p> Enfin je suis aussi sportif, je fais de la <b>natation</b> assez régulièrement pour me maintenir en bonnes conditions physiques. Je pense aussi me ré-inscrire à une <b>salle de musculation</b> prochainement !</p>
     </div>  
 
   </template>
