--- a/front/src/my-projects.html
+++ b/front/src/my-projects.html
@@ -15,7 +15,7 @@
 				border-radius: 5px;
 				background-color: #3F525A;
 				color: #F8F0C2;
-                text-align: center;
+                text-align: justify;
 		  }
 		  .circle {
 				display: inline-block;
@@ -34,7 +34,7 @@
 				color: #68B8DB;
 		  }
 		  
-          .content
+          .content,.center
           {
             text-align: center;
           }
