--- a/front/src/my-diploma.html
+++ b/front/src/my-diploma.html
@@ -57,7 +57,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <div class="card">
       <div class="content">
           <div class="circle">1</div>
-          <h1>Le bac STI !</h1>
+          <h1>Le bac STI</h1>
       </div>
         <div class="center" ><my-svg src="../public/images/Diplomes/bacSTI.svg" width="80%" height="65%"></my-svg></div>
     </div>
@@ -71,14 +71,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <div class="card">
      <div class="content">
         <div class="circle">3</div>
-        <h1>Le dernier diplôme en date ! (Responsable en Ingiènerie des Logiciels)</h1>
+        <h1>Le dernier diplôme en date (Responsable en Ingiènerie des Logiciels)</h1>
      </div>
       <div class="center" > Pas encore d'image pour celui-ci ! (Elle viendra après la cérémonie de remise le <b>9 Décembre 2016 </b>)</div>
     </div>
     <div class="card">  
      <div class="content">
         <div class="circle">4</div>
-          <h1>Les certifications !</h1>
+          <h1>Les certifications</h1>
      </div>
           <div class="center"> <h2> Certification Auto-Entrepreneur</h2></div>    
           <div class="center"><my-svg src="../public/images/Diplomes/Entrepreneur.svg" width="80%" height="65%"></my-svg></div>  
@@ -93,12 +93,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     Polymer({
 
-      is: 'my-diploma',
-      
-      ready : function()
-        {
-            console.log("readyDiploma");
-        }
+      is: 'my-diploma'
     });
 
   </script>
