--- a/front/index.html
+++ b/front/index.html
@@ -60,11 +60,10 @@ function lazyLoadPolymerAndElements() {
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-     <link rel="stylesheet" type="text/css"
-          href="https://fonts.googleapis.com/css?family=Raleway">
-    <style> body
+    <style>
+        body
         {
-            font-family: "Raleway";
+            font-family: sans-serif;
         }
     </style>
   <title>Christophe Gerard </title>
