--- a/front/index.html
+++ b/front/index.html
@@ -11,7 +11,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!doctype html>
 <html lang="fr">
 <head>
-<script>         
+<script async>         
 /**
  * Conditionally loads webcomponents polyfill if needed.
  * Credit: Glen Maddern (geelen on GitHub)
@@ -59,6 +59,7 @@ function lazyLoadPolymerAndElements() {
     </script>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="description" content="Passionné d'informatique depuis mon adolescence, j'apprends aujourd'hui des technologies récentes et les mets en applications.">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <style>
         body
