--- a/front/index.html
+++ b/front/index.html
@@ -71,7 +71,7 @@ function lazyLoadPolymerAndElements() {
   <link rel="shortcut icon" sizes="32x32" href="./public/images/siteperso.png">
 </head>
 <body>
-    <my-app></my-app>
+    <my-app unresolved></my-app>
 </body>
 </html>
 
