Ajout de l'asynchrone
Signed-off-by: Christophe GERARD <christophe.gerard8@gmail.com>

--- a/front/index.html
+++ b/front/index.html
@@ -52,6 +52,7 @@ function lazyLoadPolymerAndElements() {
     var elImport = document.createElement('link');
     elImport.rel = 'import';
     elImport.href = elementURL;
+    elImport.async = 'async';
     document.head.appendChild(elImport);
 
   })
