--- a/front/index.html
+++ b/front/index.html
@@ -11,7 +11,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!doctype html>
 <html lang="fr">
 <head>
-<script async>         
+<script type="text/javascript" async="async">         
 /**
  * Conditionally loads webcomponents polyfill if needed.
  * Credit: Glen Maddern (geelen on GitHub)
