--- a/front/src/my-diploma.html
+++ b/front/src/my-diploma.html
@@ -23,7 +23,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         padding: 16px;
         margin: 24px;
         border-radius: 5px;
-        background-color:#3F525A;
+        background: url('../public/images/backgroundCard.jpg');
         color: #F8F0C2;
         text-align: justify;
       }
@@ -52,6 +52,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         .center, .content
         {
             text-align : center;
+        }
+        
+        .card p, .content
+        {
+            opacity: 0.8;
         }
     </style>
     <div class="card">
