--- a/front/src/my-experiences.html
+++ b/front/src/my-experiences.html
@@ -24,7 +24,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         padding: 16px;
         margin: 24px;
         border-radius: 5px;
-        background-color: #3F525A;
+        background: url('../public/images/backgroundCard.jpg');
         color: #F8F0C2;
         text-align: justify;
       }
@@ -58,6 +58,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         .center
         {
             text-align : center;
+        }
+        
+       .card p, .content
+        {
+            opacity: 0.8;
         }
     </style>
 
