--- a/front/src/my-history.html
+++ b/front/src/my-history.html
@@ -25,7 +25,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         padding: 16px;
         margin: 24px;
         border-radius: 5px;
-        background-color: #3F525A;
+        background: url('../public/images/backgroundCard.jpg');
         color: #F8F0C2;
         text-align: justify;
       }
@@ -61,6 +61,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             text-align : center;
         }
         
+        .card p, .content
+        {
+            opacity: 0.8;
+        }
         
     </style>
     <div class="card">
