--- a/front/index.html
+++ b/front/index.html
@@ -25,8 +25,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <link rel="shortcut icon" sizes="32x32" href="./public/images/siteperso.png">
 </head>
 <body>
-    <my-app unresolved></my-app>
     <script src="app.js"></script>
+    <my-app></my-app>
 </body>
 </html>
 
