Ajout de la partie BarBeasts.

--- a/front/src/my-diploma.html
+++ b/front/src/my-diploma.html
@@ -69,7 +69,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <div class="card">
      <div class="content">
       <div class="circle">2</div>
-      <h1>Le DUT Informatique !</h1>
+      <h1>Le DUT Informatique</h1>
       </div>
         <div class="center" ><my-svg src="../public/images/Diplomes/DUT.svg" width="80%" height="65%"></my-svg></div>
     </div>
