--- a/front/src/my-projects.html
+++ b/front/src/my-projects.html
@@ -232,7 +232,7 @@
                         <div class="center">
                             <div class="center flipCard">
                                 <flip-card axis="x">
-                                <front><div class="front"> <div class="title"> <h1>Vous souhaitez essayer l'application PlastProd ? Téléchargez la (<b>Depuis votre mobile uniquement</b>) et connectez-vous avec les identifiants suivant : <br/>
+                                <front><div class="front"> <div class="title"> <h1>Vous souhaitez essayer l'application PlastProd ? Connectez-vous avec les identifiants suivant : <br/>
                                 <ul>
                                     <li>Identifiant : commercial</li>
                                     <li>Mot de paase : commercial1</li>
@@ -395,7 +395,28 @@
 		        <h1>BarBeasts</h1>
                  <div><my-svg src="../public/images/Projet/barbeasts.svg" width="25%" height="25%"></my-svg></div>
             </div>
-            <p>Projet d'étude</p>
+            <p>Ce projet consistait à créer un réseau social mais consacré à la <b>musculation</b>. Partages d'expériences, d'exercices et de programme d'entrainement. On voulais en plus rajouter un calculateur de <b>programme nutritionnel</b>. Je m'explique :
+			 Je rentre ma taille et mon poids actuel, puis, mon poids souhaité avec le % de masse graisseuse. Le moteur aurait permi de calculer à partir de toutes ces données un programme alimentaire pour arriver à cet objectif avec une estimation de temps.
+			 L'ébauche du projet (<b>Mis en pause</b> depuis plus d'un an) ressemble à ceci : <a href="http://barbeasts.christophegerard.net/BarBeasts/Accueil">Ébauche de BarBeasts</a>. Vous trouverez ci-dessous tous les livrables associés à ce projet : <br/>
+			 <div class="center">
+				<div class="flipCard">
+					<flip-card axis="x">
+						<front><div class="front"> <div class="title"> <h1>Rapport de projet</h1></div></div></front>
+						<back><div class="back"><div class="actions"><my-svg src="../public/images/pdf.svg" width="80%" height="80%"></my-svg><paper-button><a href="../public/documents/BarBeasts/BarBeasts.pdf" target="_blank"> Télécharger</a></paper-button></div></div></back>
+                    </flip-card> 
+                </div>
+				<br/><br/>
+            </div>
+			 <div class="center">
+				<div class="flipCard">
+					<flip-card axis="x">
+						<front><div class="front"> <div class="title"> <h1>PowerPoint utilisé lors de la soutenance du projet </h1></div></div></front>
+						<back><div class="back"><div class="actions"><my-svg src="../public/images/ppt.svg" width="80%" height="80%"></my-svg><paper-button><a href="../public/documents/BarBeasts/BarBeasts.pptx" target="_blank"> Télécharger</a></paper-button></div></div></back>
+                    </flip-card> 
+                </div>
+				<br/><br/>
+            </div>
+			</p>
 		</div>
          <div class="card">
             <div class="content">
