Ajout de la partie Tetris

--- a/front/src/my-projects.html
+++ b/front/src/my-projects.html
@@ -397,7 +397,7 @@
             </div>
             <p>Ce projet consistait à créer un réseau social mais consacré à la <b>musculation</b>. Partages d'expériences, d'exercices et de programme d'entrainement. On voulais en plus rajouter un calculateur de <b>programme nutritionnel</b>. Je m'explique :
 			 Je rentre ma taille et mon poids actuel, puis, mon poids souhaité avec le % de masse graisseuse. Le moteur aurait permi de calculer à partir de toutes ces données un programme alimentaire pour arriver à cet objectif avec une estimation de temps.
-			 L'ébauche du projet (<b>Mis en pause</b> depuis plus d'un an) ressemble à ceci : <a href="http://barbeasts.christophegerard.net/BarBeasts/Accueil">Ébauche de BarBeasts</a>. Vous trouverez ci-dessous tous les livrables associés à ce projet : <br/>
+			 L'ébauche du projet (<b>Mis en pause</b> depuis plus d'un an) ressemble à ceci : <a href="http://barbeasts.christophegerard.net/BarBeasts/Accueil" target="_blank">Ébauche de BarBeasts</a>. Vous trouverez ci-dessous tous les livrables associés à ce projet : <br/>
 			 <div class="center">
 				<div class="flipCard">
 					<flip-card axis="x">
@@ -424,7 +424,8 @@
 		        <h1>Tetris</h1>
                  <div><my-svg src="../public/images/Projet/tetris.svg" width="25%" height="25%"></my-svg></div>
             </div>
-            <p>Projet d'étude</p>
+            <p>Ce projet est à la fois un projet d'étude et un projet personnel, j'ai eu la <b>chance</b> lors du cours de C# de pouvoir choisir mon sujet. J'ai choisi de recréer le célèbre jeu vidéo <b>Tetris</b>. J'ai ainsi pu comprendre les notions de bases liées à la création de jeu vidéo.
+			J'ai réussi à le faire <b>aboutir</b> dans une version stable disponible ici : <a href="https://github.com/Heliex/Tetris/releases" target="_blank"> Tetris V1</a>. Ce projet était <b>purement technique</b>, aucun livrable n'étais demandé. Je n'ai donc aucun document associé.</p>
 		</div>
         <div class="card">
             <div class="content">
