Ajout de la partie Diplomacy

--- a/front/src/my-projects.html
+++ b/front/src/my-projects.html
@@ -433,7 +433,27 @@
 		        <h1>Diplomacy</h1>
                  <div><my-svg src="../public/images/Projet/diplomacy.svg" width="25%" height="25%"></my-svg></div>
             </div>
-            <p>Projet d'étude</p>
+            <p> Le projet Diplomacy consistait à créer un jeu de stratégie. (Guerre de territoire). On devait réaliser une application Java, jouable en multijoueur et qui permettrait à chacun de donner des ordres d'attaques ou de défenses sur des pays sur un tour donnée. 
+			 Puis (A la fin du tour = Quand tous le monde a validé ses ordres), un algorithme exécuterai les ordres données en répondant si l'attaque à réussie ou si la défense à réussie. Comme pour les précédents projets. Vous trouverez les documents que nous avons produits ci-dessous : <br/>
+			 <div class="center">
+				<div class="flipCard">
+					<flip-card axis="x">
+						<front><div class="front"> <div class="title"> <h1>Rapport de projet</h1></div></div></front>
+						<back><div class="back"><div class="actions"><my-svg src="../public/images/pdf.svg" width="80%" height="80%"></my-svg><paper-button><a href="../public/documents/Diplomacy/Diplomacy.pdf" target="_blank"> Télécharger</a></paper-button></div></div></back>
+                    </flip-card> 
+                </div>
+				<br/><br/>
+            </div>
+			 <div class="center">
+				<div class="flipCard">
+					<flip-card axis="x">
+						<front><div class="front"> <div class="title"> <h1>PowerPoint utilisé lors de la soutenance du projet </h1></div></div></front>
+						<back><div class="back"><div class="actions"><my-svg src="../public/images/ppt.svg" width="80%" height="80%"></my-svg><paper-button><a href="../public/documents/Diplomacy/Diplomacy.pptx" target="_blank"> Télécharger</a></paper-button></div></div></back>
+                    </flip-card> 
+                </div>
+				<br/><br/>
+            </div>
+			 </p>
 		</div>
         <div class="card">
             <div class="content">
