Ajout de la partie ClaireFontaine

--- a/front/src/my-projects.html
+++ b/front/src/my-projects.html
@@ -469,7 +469,30 @@
 		        <h1>Application web (Intranet) pour le suivi de production d'un atelier</h1>
                  <div><my-svg src="../public/images/Experiences/clairefontaine.svg" width="25%" height="25%"></my-svg></div>
             </div>
-            <p>Projet pro</p>
+            <p> Projet mené en entreprise. L'existant consistait en un fichier Excel, qui récoltait les données des machines de production. Grâce aux traitements des données, des graphes de suivi de production étaient créée pour avoir une idée de la production. Ce système
+			incluait une action utilisateur manuelle tous les matins pour imprimer ces graphes. Ma mission était de trouver une solution déjà pour rendre l'interface plus sympathique qu'un simple fichier EXCEL, mais en plus, permettre une impression automatique des graphes 
+			de façon quotidienne. Cette application devait en plus permettre d'avoir une idée de la production par faction.
+			
+			Ci-dessous, les livrables qui concernent cette expérience : <br/>
+			<div class="center">
+				<div class="flipCard">
+					<flip-card axis="x">
+						<front><div class="front"> <div class="title"> <h1>Rapport de stage</h1></div></div></front>
+						<back><div class="back"><div class="actions"><my-svg src="../public/images/pdf.svg" width="80%" height="80%"></my-svg><paper-button><a href="../public/documents/SuiviDeProd/SuiviDeProd.pdf" target="_blank"> Télécharger</a></paper-button></div></div></back>
+                    </flip-card> 
+                </div>
+				<br/><br/>
+            </div>
+			 <div class="center">
+				<div class="flipCard">
+					<flip-card axis="x">
+						<front><div class="front"> <div class="title"> <h1>PowerPoint utilisé lors de la soutenance final pour mon D.U.T Informatique </h1></div></div></front>
+						<back><div class="back"><div class="actions"><my-svg src="../public/images/ppt.svg" width="80%" height="80%"></my-svg><paper-button><a href="../public/documents/SuiviDeProd/SuiviDeProd.pptx" target="_blank"> Télécharger</a></paper-button></div></div></back>
+                    </flip-card> 
+                </div>
+				<br/><br/>
+            </div>
+			</p>
 		</div>
         <div class="card">
             <div class="content">
