--- a/front/src/my-projects.html
+++ b/front/src/my-projects.html
@@ -461,7 +461,11 @@
 		        <h1>Résolveur de labyrinthe</h1>
                  <div><my-svg src="../public/images/Projet/labyrinthe.svg" width="25%" height="25%"></my-svg></div>
             </div>
-            <p>Projet d'étude</p>
+            <p> C'est un simple programme <b>Java</b> qui permets de résoudre des labyrinthes de façon automatique. Étant un programme que j'ai réalisé au <b>début</b> de mon D.U.T, il reste très basique. Je vous explique comment ça marche :
+			        En entrée, on renseigne un fichier <b>texte</b> qui contient le labyrinthe (un fichier texte de 20 colonnes par 20 lignes ; 0 = vide ; # = MUR ; E = ENTREE). Le programme va alors calculer tous les <b>chemins de sorties</b> possibles (Grâce à une méthode
+					récursive). En sortie, on retrouve une <b>interface graphique</b> qui nous colore les cases pour montrer le chemin de sorties. Ci-dessous, voici un exemple de rendu : <br />
+					<div><my-svg src="../public/images/Resolveur.svg" width="25%" height="25%"></my-svg></div>
+			</p>
 		</div>
         <div class="card">
             <div class="content">
@@ -469,8 +473,8 @@
 		        <h1>Application web (Intranet) pour le suivi de production d'un atelier</h1>
                  <div><my-svg src="../public/images/Experiences/clairefontaine.svg" width="25%" height="25%"></my-svg></div>
             </div>
-            <p> Projet mené en entreprise. L'existant consistait en un fichier Excel, qui récoltait les données des machines de production. Grâce aux traitements des données, des graphes de suivi de production étaient créée pour avoir une idée de la production. Ce système
-			incluait une action utilisateur manuelle tous les matins pour imprimer ces graphes. Ma mission était de trouver une solution déjà pour rendre l'interface plus sympathique qu'un simple fichier EXCEL, mais en plus, permettre une impression automatique des graphes 
+            <p> Projet mené en <b>entreprise<b>. L'existant consistait en un fichier Excel, qui récoltait les données des machines de production. Grâce aux traitements des données, des <b>graphes de suivi</b> de production étaient créée pour avoir une idée de la production. Ce système
+			incluait une <b>action utilisateur</b> manuelle tous les matins pour imprimer ces graphes. Ma mission était de trouver une solution déjà pour rendre l'<b>interface</b> plus sympathique qu'un simple fichier EXCEL, mais en plus, permettre une <b>impression automatique</b> des graphes 
 			de façon quotidienne. Cette application devait en plus permettre d'avoir une idée de la production par faction.
 			
 			Ci-dessous, les livrables qui concernent cette expérience : <br/>
