--- a/front/src/my-projects.html
+++ b/front/src/my-projects.html
@@ -464,7 +464,7 @@
             <p> C'est un simple programme <b>Java</b> qui permets de résoudre des labyrinthes de façon automatique. Étant un programme que j'ai réalisé au <b>début</b> de mon D.U.T, il reste très basique. Je vous explique comment ça marche :
 			        En entrée, on renseigne un fichier <b>texte</b> qui contient le labyrinthe (un fichier texte de 20 colonnes par 20 lignes ; 0 = vide ; # = MUR ; E = ENTREE). Le programme va alors calculer tous les <b>chemins de sorties</b> possibles (Grâce à une méthode
 					récursive). En sortie, on retrouve une <b>interface graphique</b> qui nous colore les cases pour montrer le chemin de sorties. Ci-dessous, voici un exemple de rendu : <br />
-					<div><my-svg src="../public/images/resolveur.svg" width="25%" height="25%"></my-svg></div>
+					<div class="center"><my-svg src="../public/images/resolveur.svg" width="25%" height="25%"></my-svg></div>
 			</p>
 		</div>
         <div class="card">
