Ajout de la partie Sel3C

--- a/front/src/my-projects.html
+++ b/front/src/my-projects.html
@@ -504,7 +504,27 @@
 		        <h1>SEL3C - Gestion d'un projet technique</h1>
                  <div><my-svg src="../public/images/Experiences/cats.svg" width="25%" height="25%"></my-svg></div>
             </div>
-            <p>Projet pro</p>
+            <p> Deuxième projet réalisé en entreprise. Il consistait à mettre en place une <b>signature éléctronique</b> (Projet beaucoup plus large que mon périmétre). Pour ma part, je me suis occupé de la partie appelée Gestion de document par référence. J'ai pu appliquer mes cours
+			de <b>gestion de projet</b> directement en entreprise. Cela à été pour moi une expérience très <b>enrichissante</b> et intéressante. Vous trouverez ci-dessous, tous les livrables liés à ce sujet : <br />
+			<div class="center">
+				<div class="flipCard">
+					<flip-card axis="x">
+						<front><div class="front"> <div class="title"> <h1>Mémoire</h1></div></div></front>
+						<back><div class="back"><div class="actions"><my-svg src="../public/images/pdf.svg" width="80%" height="80%"></my-svg><paper-button><a href="../public/documents/Sel3C/Sel3CMemoire.pdf" target="_blank"> Télécharger</a></paper-button></div></div></back>
+                    </flip-card> 
+                </div>
+				<br/><br/>
+            </div>
+			 <div class="center">
+				<div class="flipCard">
+					<flip-card axis="x">
+						<front><div class="front"> <div class="title"> <h1>PowerPoint utilisé lors de la soutenance final de Responsable en Ingénierie des Logiciels </h1></div></div></front>
+						<back><div class="back"><div class="actions"><my-svg src="../public/images/ppt.svg" width="80%" height="80%"></my-svg><paper-button><a href="../public/documents/Sel3C/Sel3C.pptx" target="_blank"> Télécharger</a></paper-button></div></div></back>
+                    </flip-card> 
+                </div>
+				<br/><br/>
+            </div>
+			</p>
 		</div>
         <div class="card">
             <div class="content">
