Ajout de la partie Bomberman (Manque que les imprim écrans).

--- a/front/src/my-projects.html
+++ b/front/src/my-projects.html
@@ -45,6 +45,7 @@
             h3
             {
                 color : #68D8DB;
+				text-align: center;
             }
 		  
           .content,.center
@@ -532,7 +533,9 @@
 		        <h1> Bomberman </h1>
                  <div><my-svg src="../public/images/Projet/bomberman.svg" width="25%" height="25%"></my-svg></div>
             </div>
-            <p>Projet perso</p>
+            <p>Alors, c'est un peu le projet dont je me sers pour <b>tester</b> toutes les technologies dont j'ai envie. Je l'ai crée une fois en <b>langage C </b>(Premier tutoriel que j'ai suivi). J'ai ensuite choisi de refaire une fois le jeu mais cette fois en <b>Java<b> et en <b>réseau</b>(Pour augmenter
+			mes compétences en gestion de thread et synchronisation. Serialisation d'objet...etc) et depuis peu j'ai repris le projet mais cette fois-ci en <b>langage WEB</b> (NodeJS pour la partie serveur) et du JavaScript pur pour la partie client. Même si c'est quelquechose que j'ai
+			jamais réussi à aboutir. C'est quand même ce projet qui m'a permis de <b>comprendre des concepts</b> assez avancé dans tous les langages que j'ai cité. Je vais maintenant mettre une suite d'écrans pour illustrer mes propos : <br/></p>
 		</div>
         <div class="card">
             <div class="content">
